--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "bucketName": "updwn-test",
-    "accessKeyID": "AKIA5VM3NOJIQII2O5KQ",
-    "secreteAccessKey": "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"
+    "bucketName": "BUCKETNAME",
+    "accessKeyID": "ACCESSKEYID",
+    "secreteAccessKey": "SECRETEACCESSKEY",
+    "listMaxItemsPerPage": 50
 }
